# z-gpt

./:  .env  .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  API_KEY_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  IMPROVEMENTS_SUMMARY.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  TROUBLESHOOTING.md  alembic.ini  docker-compose.yml  pyproject.toml  quick-start.sh  requirements-dev.txt  requirements.txt
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml  security-audit.yml
backend/: config.py  main.py  models.py  requirements.txt
backend/api/: auth.py  chat.py  image.py  translate.py
backend/config/: settings.py
backend/core/: dependencies.py  llm_handler.py  logging_utils.py  moderation.py  observability.py  security.py
backend/db/: crud.py  models.py  session.py
backend/db/migrations/: env.py
backend/middleware/: __init__.py  auth.py  dependencies.py  metrics.py  rate_limit.py  security_headers.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_moderation.py  test_rate_limit.py  test_security_headers.py
backend/utils/: language_tools.py  model_loader.py
docs/: DB_MIGRATION_STRATEGY.md  DEPLOYMENT.md  PRODUCTION_PLAN.md  TODO.md  TROUBLESHOOTING.md
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.js  App.test.js  index.css
frontend/src/api/: auth.js  chat.js  client.js  image.js  translate.js
frontend/src/auth/: tokenStorage.js
frontend/src/components/: ChatBox.jsx  ErrorBoundary.jsx  ImageGenerator.jsx
frontend/src/context/: AuthContext.jsx
tests/: __init__.py  conftest.py  test_models.py  test_root.py
(+19 files in other folders)
